--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div id="header">
 		<div class="clearfix">
 			<div class="logo">
-				<a href="http://www.fihukuk.com/index.php"><img src="files/logo.png" alt="Fİ HUKUK"></a>
+				<a href="http://www.fihukuk.com/index.html"><img src="files/logo.png" alt="Fİ HUKUK"></a>
 			</div>
 			<ul class="navigation">
 				<li class="active">
